pregled dijakov in njihovih testov za admina

--- a/izberi.html
+++ b/izberi.html
@@ -9,5 +9,6 @@
 <body>
     <a href="/novTest">nov test</a>
     <a href="/adminNaloge">vse naloge</a>
+    <a href="/vsiDijaki">vsi dijaki</a>
 </body>
 </html>
